--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@
 
 </head>
 <body>
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Enter GitHub username here" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Enter</button>
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Enter GitHub username here" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Enter</button>
+  </div>
+
+  <main id="card">
+    <!--<div class="card">
+      <img src="..." class="card-img-top " alt="User Image">
+      <div class="card-body">
+        <h5 class="card-title">Name</h5>
+        <p class="card-text">Bio</p>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Name</h5>
-          <p class="card-text">Bio</p>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">Followes</li>
-          <li class="list-group-item">Following</li>
-          <li class="list-group-item">Repo</li>
-        </ul>
-        
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Followers</li>
+        <li class="list-group-item">Following</li>
+        <li class="list-group-item">Repo</li>
+      </ul>
+      <div id="repos">
+        <a class="repo" href="#" target="_blank">Repo 1</a>
+        <a class="repo" href="#" target="_blank">Repo 2</a>
+        <a class="repo" href="#" target="_blank">Repo 3</a>
       </div>
+    </div>-->
+  </main>
+
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
